# snowflake-strands-agent

./: .env.template  .gitignore  README.md  agent_cortex.py  agent_cortex_orchestration.py  agent_strands.py  app_cortex.py  app_mcp.py  app_strands.py  app_strands_optimizer.py  pyproject.toml  setup.sql
config/: config.json  mcp.json
