[project]
name = "snowflake-strands-agents"
version = "0.1.0"
description = "Agentic AI for Snowflake with Amazon Strands."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit==v1.48.0",
    "snowflake-connector-python",
    "snowflake-snowpark-python",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.12.13",
    "strands-agents[openai]==v1.4.0",
    "strands-agents-tools>=0.2.3",
    "nest-asyncio>=1.6.0",
    "pyyaml>=6.0.2",
    "orchestration-framework==1.1.1",
    "tabulate>=0.9.0",
]
